--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,6 @@ type: web
 
     rootDir: webdis
 
-    dockerCommand: ./1.sh # optional (defaults to Dockerfile command)
+    dockerCommand:  # optional (defaults to Dockerfile command)
 
     numInstances: 1 #
